--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,119 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261579681793811%22%3A%22uzzCfR1h%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.266Z",
+        "lastAccessed": "2025-08-17T12:34:07.266Z"
+    },
+    {
+        "key": "datr",
+        "value": "HMuhaLIaxsPBzAo-BwZbKSyB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "sb",
+        "value": "HMuhaCiKwIj0fDZuqkDnwPAL",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x873",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579681793811",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "xs",
+        "value": "35%3AM3jLV5PIkCBMfw%3A2%3A1755433801%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "fr",
+        "value": "0e9K0ilcDTnHocGGq.AWeGYKR33PeVwEhRtZFReu4MlOwf8dgcDgtZufssyixJk8LUQ08.Boocsc..AAA.0.0.Booctm.AWdhxnWsD3tgCL_I9sC3wg2iHZg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "pas",
+        "value": "61579681793811%3AKLwy19OWqV",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2896%3Btimestamp%3A1755433830",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101633815%3BT%3A29257230",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B783x393x2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-17T12:34:07.267Z",
+        "lastAccessed": "2025-08-17T12:34:07.267Z"
+    }
+]
